# TinyTrain

./: README.md  pyproject.toml
.github/workflows/: tests.yml
core/: __init__.py  data.py  functional.py  nn.py  ops.py  optim.py  tensor.py  utils.py
core/kernels/: __init__.py  activations.py  attention.py  bridge.py  layernorm.py  matmul.py
examples/: bench_attention.py  train_regression.py  train_transformer.py
tests/: test_autograd_stress.py  test_functional.py  test_integration.py  test_kernels.py  test_nn.py  test_ops.py  test_optim.py  test_tensor.py
