[project]
name = "tinytrain"
version = "0.1.0"
description = "Minimal ML framework with autograd and GPU support"
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x"]
triton = ["triton"]
test = ["pytest", "torch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
